--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@emailjs/browser": "^4.4.1",
+        "@hookform/resolvers": "^4.1.3",
         "@radix-ui/react-accordion": "^1.2.3",
+        "@radix-ui/react-dialog": "^1.1.6",
+        "@radix-ui/react-label": "^2.1.2",
         "@radix-ui/react-separator": "^1.1.2",
         "@radix-ui/react-slot": "^1.1.2",
         "class-variance-authority": "^0.7.1",
@@ -19,10 +23,12 @@
         "next": "^14.2.24",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-hook-form": "^7.54.2",
         "react-icons": "^5.0.1",
+        "sonner": "^2.0.1",
         "tailwind-merge": "^2.2.0",
         "tailwindcss-animate": "^1.0.7",
-        "zod": "^3.22.4"
+        "zod": "^3.24.2"
     },
     "devDependencies": {
         "@types/node": "^20.11.0",
