--- a/package.json
+++ b/package.json
@@ -6,21 +6,30 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "db:generate": "drizzle-kit generate:pg",
+        "db:push": "drizzle-kit push:pg"
     },
     "dependencies": {
         "@emailjs/browser": "^4.4.1",
         "@hookform/resolvers": "^4.1.3",
+        "@neondatabase/serverless": "^0.10.4",
         "@radix-ui/react-accordion": "^1.2.3",
         "@radix-ui/react-dialog": "^1.1.6",
         "@radix-ui/react-label": "^2.1.2",
         "@radix-ui/react-separator": "^1.1.2",
         "@radix-ui/react-slot": "^1.1.2",
+        "@radix-ui/react-tabs": "^1.1.3",
+        "bcrypt": "^5.1.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "dotenv": "^16.4.7",
+        "drizzle-orm": "^0.40.0",
         "framer-motion": "^12.4.10",
+        "jose": "^6.0.10",
         "lucide-react": "^0.477.0",
         "next": "^14.2.24",
+        "pg": "^8.14.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-hook-form": "^7.54.2",
@@ -31,11 +40,13 @@
         "zod": "^3.24.2"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
         "@types/node": "^20.11.0",
         "@types/react": "^18.2.45",
         "@types/react-dom": "^18.2.18",
         "autoprefixer": "^10.4.16",
         "critters": "^0.0.23",
+        "drizzle-kit": "^0.30.5",
         "eslint": "^8.56.0",
         "eslint-config-next": "14.1.0",
         "eslint-plugin-tailwindcss": "^3.18.0",
