--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "bcrypt": "^5.1.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "cookie": "^1.0.2",
         "dotenv": "^16.4.7",
         "drizzle-orm": "^0.40.0",
         "framer-motion": "^12.4.10",
