--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "drizzle-orm": "^0.40.0",
         "framer-motion": "^12.4.10",
         "jose": "^6.0.10",
+        "jsonwebtoken": "^9.0.2",
         "lucide-react": "^0.477.0",
         "next": "^14.2.24",
         "pg": "^8.14.0",
@@ -42,6 +43,7 @@
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
+        "@types/jsonwebtoken": "^9.0.9",
         "@types/node": "^20.11.0",
         "@types/react": "^18.2.45",
         "@types/react-dom": "^18.2.18",
