--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "db:push": "drizzle-kit push:pg"
     },
     "dependencies": {
+        "@auth/drizzle-adapter": "^1.8.0",
         "@emailjs/browser": "^4.4.1",
         "@hookform/resolvers": "^4.1.3",
         "@neondatabase/serverless": "^0.10.4",
@@ -23,6 +24,7 @@
         "@radix-ui/react-slot": "^1.1.2",
         "@radix-ui/react-tabs": "^1.1.3",
         "bcrypt": "^5.1.1",
+        "bcryptjs": "^3.0.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cookie": "^1.0.2",
