--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-hook-form": "^7.54.2",
+        "react-hot-toast": "^2.5.2",
         "react-icons": "^5.0.1",
         "sonner": "^2.0.1",
         "stripe": "^18.0.0",
